tests/dependencies/global_with_same_name.sy
a :: 0
a :: 0
// error: Name collision - duplicate definitions of the namespace "a"
